Experimetns with PyTorch CNN are started!

--- a/pytorch_model_exp.ipynb
+++ b/pytorch_model_exp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
     "\n",
     "import load_data\n",
     "#import first_exp_model_with_pytorch as dloader\n",
@@ -50,10 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "W = H = 512\n",
+    "\n",
     "LABEL_NAMES_MAP = {\n",
     "    0:  \"Nucleoplasm\",  \n",
     "    1:  \"Nuclear membrane\",   \n",
@@ -139,14 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CNN(nn.Module):\n",
+    "class HPA_ConvNeuralNet(nn.Module):\n",
     "    \n",
     "    def __init__(self):\n",
-    "        super(CNN, self).__init__()\n",
+    "        super(HPA_ConvNeuralNet, self).__init__()\n",
     "        self.conv1 = nn.Sequential(\n",
     "            nn.Conv2d(4, 8, 5, 1, 2),\n",
     "            nn.ReLU(),\n",
@@ -336,10 +339,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hpa_conv_neural_net = HPA_ConvNeuralNet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.SGD(hpa_conv_neural_net.parameters(), lr=0.001, momentum=0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for epoch in range(2):\n",
+    "    running_loss = 0.0\n",
+    "    for i, data in enumerate(train_loader, 0):\n",
+    "        \n",
+    "        inputs, labels = data\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        \n",
+    "        outputs = hpa_conv_neural_net(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        running_loss += loss.item()\n",
+    "        \n",
+    "        if i % 20 == 19:\n",
+    "            print(\"[%d, %5d, loss: %.3f]\" % (epoch + 1, i + 1), running_loss / 20.0)\n",
+    "            running_loss = 0.0\n",
+    "            \n",
+    "print(\"Finished Training\")\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
