Start work with validation

--- a/pytorch_model_exp.ipynb
+++ b/pytorch_model_exp.ipynb
@@ -25,6 +25,7 @@
     "from torch.utils.data.sampler import SubsetRandomSampler\n",
     "\n",
     "import load_data\n",
+    "import model\n",
     "#import first_exp_model_with_pytorch as dloader\n",
     "#import first_exp_model_with_pytorch"
    ]
@@ -185,9 +186,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "def prepare_loaders():\n",
-    "    return "
+    "def validate(test_loader, model):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        correct = 0\n",
+    "        total = 0\n",
+    "        for images, labels in test_loader:\n",
+    "            images = images.to(device)\n",
+    "            labels = labels.to(device)\n",
+    "            outputs = model(images)\n",
+    "            _, predicted = torch.max(outputs.data, 1)\n",
+    "            total += labels.size(0)\n",
+    "            correct += (predicted == labels).sum().item()\n",
+    "        accuracy = correct / total\n",
+    "        print(\n",
+    "                \"Test accuracy of the model on the 10000 test images: {} \".format(\n",
+    "                    accuracy\n",
+    "                )\n",
+    "            )\n",
+    "\n",
+    "    return accuracy"
    ]
   },
   {
