--- a/pytorch_model_exp-1.ipynb
+++ b/pytorch_model_exp-1.ipynb
@@ -18,6 +18,7 @@
     "import seaborn as sns\n",
     "import sklearn\n",
     "import skimage\n",
+    "from PIL import Image\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
