Continue work with code for calculate learn and validation loss/accuracy

--- a/hpa_pytorch_model.ipynb
+++ b/hpa_pytorch_model.ipynb
@@ -196,18 +196,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate(model, validation_loader, validation_dataset_size):\n",
+    "def test(model, validation_loader, validation_dataset_size, criterion):\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
     "        \n",
-    "        correct = 0\n",
-    "        total = 0\n",
-    "        for images, labels in validation_loader:\n",
-    "            images = images.to(device, dtype=torch.float)\n",
+    "        correct_predicted_total = 0.0\n",
+    "        total_loss = 0.0\n",
+    "        total = 0.0\n",
+    "        \n",
+    "        for inputs, labels in validation_loader:\n",
+    "            inputs = inputs.to(device, dtype=torch.float)\n",
     "            \n",
     "            labels = labels.to(device, dtype=torch.uint8)\n",
     "            \n",
-    "            outputs = model(images)\n",
+    "            outputs = model(inputs)\n",
+    "            \n",
+    "            loss = criterion(outputs, labels)\n",
+    "            total_loss += loss.item() * inputs.size(0)\n",
+    "            \n",
     "            predicted = outputs > 0\n",
     "\n",
     "            total += labels.size(0)\n",
@@ -215,10 +221,10 @@
     "            sum_of_correct_predicted = torch.sum((predicted == labels).all(1))\n",
     "            item = sum_of_correct_predicted.item()\n",
     "\n",
-    "            correct += item\n",
+    "            correct_predicted_total += item\n",
     "\n",
     "        print(\"total: \", total)\n",
-    "        accuracy = correct * 1.0 / total\n",
+    "        accuracy = correct_predicted_total / total\n",
     "        print(\n",
     "                \"Validation accuracy of the model on the {} validation images: {} \".format(\n",
     "                    validation_dataset_size,\n",
@@ -227,6 +233,46 @@
     "            )\n",
     "\n",
     "    return accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validate(model, validation_loader, criterion):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        \n",
+    "        correct_predicted_total = 0.0\n",
+    "        total_loss = 0.0\n",
+    "        #total = 0.0\n",
+    "        \n",
+    "        for inputs, labels in validation_loader:\n",
+    "            inputs = inputs.to(device, dtype=torch.float)\n",
+    "            \n",
+    "            labels = labels.to(device, dtype=torch.uint8)\n",
+    "            \n",
+    "            outputs = model(inputs)\n",
+    "            \n",
+    "            loss = criterion(outputs, labels)\n",
+    "            total_loss += loss.item() * inputs.size(0)\n",
+    "            \n",
+    "            predicted = outputs > 0\n",
+    "\n",
+    "            #total += labels.size(0)\n",
+    "\n",
+    "            sum_of_correct_predicted = torch.sum((predicted == labels).all(1))\n",
+    "            item = sum_of_correct_predicted.item()\n",
+    "\n",
+    "            correct_predicted_total += item\n",
+    "\n",
+    "        #accuracy = correct_predicted_total / total\n",
+    "        accuracy = correct_predicted_total\n",
+    "        \n",
+    "\n",
+    "    return (total_loss, accuracy)"
    ]
   },
   {
@@ -397,11 +443,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "num_of_epoch = 10\n",
+    "learn_losses = []\n",
+    "learn_accuracies = []\n",
+    "validation_losses = []\n",
+    "validation_accuracies = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "torch.cuda.empty_cache()\n",
     "since = time.time()\n",
-    "for epoch in range(2):\n",
+    "for epoch in range(num_of_epoch):\n",
+    "    epoch_learn_accuracy = 0.0\n",
+    "    epoch_learn_loss = 0.0\n",
     "    \n",
-    "    running_loss = 0.0\n",
+    "    #total = 0.0\n",
     "    for i, data in enumerate(train_loader, 0):\n",
     "        \n",
     "        inputs, labels = data\n",
@@ -415,11 +476,15 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        \n",
-    "        running_loss += loss.item()\n",
+    "        learn_loss += loss.item() * inputs.size(0)\n",
     "        \n",
-    "        if i % 200 == 199:\n",
-    "            print(\"[%d, %5d, loss: %.3f]\" % (epoch + 1, i + 1, running_loss / 20.0))\n",
-    "            running_loss = 0.0\n",
+    "        predicted = outputs > 0\n",
+    "\n",
+    "        #total += labels.size(0)\n",
+    "        sum_of_correct_predicted = torch.sum((predicted == labels).all(1))\n",
+    "        item = sum_of_correct_predicted.item()\n",
+    "\n",
+    "        learn_p += item\n",
     "            \n",
     "print(\"Finished Training\")\n",
     "time_elapsed = time.time() - since\n",
