Added the same code for calculate accuracy/loss to train cycle and to validate() function. Move trainig cycle code to special function?

--- a/hpa_pytorch_model.ipynb
+++ b/hpa_pytorch_model.ipynb
@@ -461,7 +461,8 @@
     "for epoch in range(num_of_epoch):\n",
     "    epoch_learn_accuracy = 0.0\n",
     "    epoch_learn_loss = 0.0\n",
-    "    \n",
+    "    correct_predicted_total = 0.0\n",
+    "    total_loss = 0.0\n",
     "    #total = 0.0\n",
     "    for i, data in enumerate(train_loader, 0):\n",
     "        \n",
@@ -483,8 +484,7 @@
     "        #total += labels.size(0)\n",
     "        sum_of_correct_predicted = torch.sum((predicted == labels).all(1))\n",
     "        item = sum_of_correct_predicted.item()\n",
-    "\n",
-    "        learn_p += item\n",
+    "        correct_predicted_total += item\n",
     "            \n",
     "print(\"Finished Training\")\n",
     "time_elapsed = time.time() - since\n",
