Complete code for calculation train and validation  loss and accuracy

--- a/hpa_pytorch_model.ipynb
+++ b/hpa_pytorch_model.ipynb
@@ -443,9 +443,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_epoch = 10\n",
-    "learn_losses = []\n",
-    "learn_accuracies = []\n",
+    "num_of_epoch = 4\n",
+    "train_losses = []\n",
+    "train_accuracies = []\n",
     "validation_losses = []\n",
     "validation_accuracies = []"
    ]
@@ -459,8 +459,8 @@
     "torch.cuda.empty_cache()\n",
     "since = time.time()\n",
     "for epoch in range(num_of_epoch):\n",
-    "    epoch_learn_accuracy = 0.0\n",
-    "    epoch_learn_loss = 0.0\n",
+    "    epoch_train_accuracy = 0.0\n",
+    "    epoch_train_loss = 0.0\n",
     "    correct_predicted_total = 0.0\n",
     "    total_loss = 0.0\n",
     "    #total = 0.0\n",
@@ -477,7 +477,7 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        \n",
-    "        learn_loss += loss.item() * inputs.size(0)\n",
+    "        train_loss += loss.item() * inputs.size(0)\n",
     "        \n",
     "        predicted = outputs > 0\n",
     "\n",
@@ -485,6 +485,28 @@
     "        sum_of_correct_predicted = torch.sum((predicted == labels).all(1))\n",
     "        item = sum_of_correct_predicted.item()\n",
     "        correct_predicted_total += item\n",
+    "        \n",
+    "    epoch_train_loss = train_loss / train_dataset_size\n",
+    "    epoch_learn_accuracy = correct_predicted_total / train_dataset_size\n",
+    "    \n",
+    "    validation_loss, validation_accuracy = validate(hpa_conv_neural_net, validation_loader, criterion)\n",
+    "    \n",
+    "    epoch_validation_loss = validation_loss / validation_dataset_size\n",
+    "    epoch_validation_accuracy = validation_accuracy / validation_dataset_size\n",
+    "    \n",
+    "    print(\"Epoch {}: train loss {}, train accuracy\"\n",
+    "          \" {}, validation loss {}, validation accuracy {}\".format(\n",
+    "              epoch + 1,\n",
+    "              epoch_train_loss,\n",
+    "              epoch_train_accuracy,\n",
+    "              epoch_validation_loss,\n",
+    "              epoch_validation_accuracy\n",
+    "        )\n",
+    "    )\n",
+    "    train_losses.append(epoch_train_loss)\n",
+    "    train_accuracies.append(epoch_train_accuracy)\n",
+    "    validation_losses.append(epoch_validation_loss)\n",
+    "    validation_accuracies.append(epoch_validation_accuracy)\n",
     "            \n",
     "print(\"Finished Training\")\n",
     "time_elapsed = time.time() - since\n",
