Change code for labels represention in validation() func: labels.to(device, dtype=torch.float), and labels = labels.data.byte()

--- a/hpa_pytorch_model.ipynb
+++ b/hpa_pytorch_model.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,12 +262,13 @@
     "        \n",
     "        for inputs, labels in validation_loader:\n",
     "            inputs = inputs.to(device, dtype=torch.float)\n",
-    "            \n",
-    "            labels = labels.to(device, dtype=torch.uint8)\n",
-    "            \n",
+    "            #labels_as_float = labels.to(device, dtype=torch.float)\n",
+    "            #labels = labels.to(device, dtype=torch.uint8)\n",
+    "            labels = labels.to(device, dtype=torch.float)\n",
     "            outputs = model(inputs)\n",
     "            \n",
     "            loss = criterion(outputs, labels)\n",
+    "            #loss = criterion(outputs, labels_as_float)\n",
     "            total_loss += loss.item() * inputs.size(0)\n",
     "            \n",
     "            predicted = outputs > 0\n",
