Firs success training

--- a/hpa_pytorch_model.ipynb
+++ b/hpa_pytorch_model.ipynb
@@ -569,9 +569,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: train loss 430.2804533085376, train accuracy 0.0, validation loss 471.53602513171177, validation accuracy 0.055519794013517865\n",
+      "Epoch 2: train loss 362.9452288827526, train accuracy 0.0, validation loss 480.6686800050321, validation accuracy 0.07121017058255552\n",
+      "Epoch 3: train loss 236.94575557778307, train accuracy 0.0, validation loss 586.1509696388306, validation accuracy 0.08496942388155777\n",
+      "Epoch 4: train loss 123.07440555149383, train accuracy 0.0, validation loss 818.7249533091859, validation accuracy 0.09349855165754747\n",
+      "Finished Training\n",
+      "Training complete in 53m 39s\n"
+     ]
+    }
+   ],
    "source": [
     "torch.cuda.empty_cache()\n",
     "since = time.time()\n",
