--- a/hpa_pytorch_model.ipynb
+++ b/hpa_pytorch_model.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,6 +725,82 @@
     "plt.legend()\n",
     "plt.title(\"accuracy by epoch\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/uldo/miniconda3/envs/DS-New/lib/python3.6/site-packages/torch/serialization.py:241: UserWarning: Couldn't retrieve source code for container of type HPA_ConvNeuralNet. It won't be checked for correctness upon loading.\n",
+      "  \"type \" + obj.__name__ + \". It won't be checked \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_model(hpa_conv_neural_net, full=True, name='hpa_conv_neural_net_1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "итого 747M\r\n",
+      "-rw-r--r-- 1 uldo uldo 1,8M дек 15 14:41 4-channel-resnet-from-scratch-pytorch-lb-0-16-1.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo  15K дек 13 19:33 4-channel-resnet-from-scratch-pytorch-lb-0-16.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo 2,1K янв  3 21:28 another_torch_validation_example.py\r\n",
+      "-rw-r--r-- 1 uldo uldo  29K дек  7 19:11 baseline-u-net-on-pytorch.py\r\n",
+      "-rw-r--r-- 1 uldo uldo  91M дек 15 13:49 bestmodel_1_0.49606512784957885.torch\r\n",
+      "-rw-r--r-- 1 uldo uldo  91M дек 13 19:34 bestmodel_1_0.5092800498008728.torch\r\n",
+      "-rw-r--r-- 1 uldo uldo  67K дек 23 19:14 cifar10_tutorial.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo  12K дек 23 18:51 cifar10_tutorial.py\r\n",
+      "-rw-r--r-- 1 uldo uldo 226M янв  2 20:30 cnn.pkl\r\n",
+      "drwxr-xr-x 3 uldo uldo 4,0K дек 23 18:59 data\r\n",
+      "-rw-r--r-- 1 uldo uldo 6,0M дек 15 20:04 first_exp_eda-1.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo 3,3M дек 13 11:31 first_exp_eda.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo 2,4K дек 15 20:17 first_exp_model_with_pytorch.py\r\n",
+      "-rw-r--r-- 1 uldo uldo 226M янв  7 23:18 hpa_conv_neural_net_1.pkl\r\n",
+      "-rw-r--r-- 1 uldo uldo 633K янв  7 23:19 hpa_pytorch_model.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo  11K ноя 25 07:03 image_operations.py\r\n",
+      "-rw-r--r-- 1 uldo uldo 7,8K янв  1 19:03 load_data.py\r\n",
+      "-rw-r--r-- 1 uldo uldo  649 дек 29 17:31 model.py\r\n",
+      "-rw-r--r-- 1 uldo uldo    2 ноя 25 20:37 preprocessing_data.py\r\n",
+      "-rw-r--r-- 1 uldo uldo  86M дек 31 06:45 protein-atlas-cnn-with-pytorch-exps-1.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo 3,7M янв  2 01:52 protein-atlas-cnn-with-pytorch-exps-2.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo 1,9M янв  4 19:39 protein-atlas-cnn-with-pytorch-exps-3.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo  25K дек 12 19:01 protein-atlas-cnn-with-pytorch.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo  19K дек  7 19:11 protein-atlas-cnn-with-pytorch.py\r\n",
+      "-rw-r--r-- 1 uldo uldo  83K дек 13 19:33 protein-atlas-exploration-and-baseline.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo  55K дек  8 17:42 protein-atlas-exploration-and-baseline.py\r\n",
+      "drwxr-xr-x 2 uldo uldo 4,0K янв  1 19:17 __pycache__\r\n",
+      "-rw-r--r-- 1 uldo uldo  23K дек 16 00:05 pytorch_data_loader.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo 393K дек 16 15:31 pytorch-densenet-as-feature-extractor-1.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo  19K дек 13 19:33 pytorch-densenet-as-feature-extractor.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo 9,7K дек  7 19:11 pytorch-densenet-as-feature-extractor.py\r\n",
+      "-rw-r--r-- 1 uldo uldo 563K янв  1 01:13 pytorch_model_exp-1.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo 5,7M янв  2 08:26 pytorch_model_exp-2.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo 427K дек 29 17:41 pytorch_model_exp.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo   70 дек 15 07:15 README.md\r\n",
+      "-rw-r--r-- 1 uldo uldo 5,7M дек  3 18:34 Regions-Clustering-Seaborn-New.ipynb\r\n",
+      "-rw-r--r-- 1 uldo uldo 2,9K янв  3 21:32 stackoverflow_pythorch_example_1.py\r\n",
+      "-rw-r--r-- 1 uldo uldo 4,3K янв  3 21:22 torch_train_example.py\r\n",
+      "-rw-r--r-- 1 uldo uldo 5,1K янв  4 17:57 train.py\r\n",
+      "-rw-r--r-- 1 uldo uldo  28K дек  7 19:11 u_net_baseline_with_pytorch.py\r\n",
+      "-rw-r--r-- 1 uldo uldo  483 янв  3 21:25 validation_torch_loss_example.py\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -lh"
    ]
   },
   {
