Added one_epoch_model_process() function, that (probably) can be make universal code for training and validation

--- a/hpa_pytorch_model.ipynb
+++ b/hpa_pytorch_model.ipynb
@@ -289,13 +289,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one_epoch_model_process(model, loader, criterion):\n",
+    "    accuracy = 0.0\n",
+    "    total_loss = 0.0\n",
+    "\n",
+    "    for inputs, labels in validation_loader:\n",
+    "        inputs = inputs.to(device, dtype=torch.float)\n",
+    "        labels = labels.to(device, dtype=torch.float)\n",
+    "        outputs = model(inputs)\n",
+    "            \n",
+    "        loss = criterion(outputs, labels)\n",
+    "        total_loss += loss.item() * inputs.size(0)\n",
+    "            \n",
+    "        predicted = outputs > 0\n",
+    "\n",
+    "        labels = labels.data.byte()\n",
+    "        torch_sum_of_correct_predicted = torch.sum((predicted == labels).all(1))\n",
+    "        correct_predicted = torch_sum_of_correct_predicted.item()\n",
+    "\n",
+    "        accuracy += correct_predicted        \n",
+    "\n",
+    "    return (total_loss, accuracy) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_model(model, full=True, name='model'):\n",
     "    if not full:\n",
-    "        torch.saveee(model.state_dict(), '{}_params.pkl'.format(name))\n",
+    "        torch.save(model.state_dict(), '{}_params.pkl'.format(name))\n",
     "    else:\n",
     "        torch.save(model, '{}.pkl'.format(name))\n",
     "    return"
