Started writting train_model() function

--- a/hpa_pytorch_model.ipynb
+++ b/hpa_pytorch_model.ipynb
@@ -293,16 +293,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def one_epoch_model_process(model, loader, criterion):\n",
+    "def one_epoch_model_process(model, loader, criterion, optimizer=None):\n",
     "    accuracy = 0.0\n",
     "    total_loss = 0.0\n",
     "\n",
-    "    for inputs, labels in validation_loader:\n",
+    "    for inputs, labels in loader:\n",
     "        inputs = inputs.to(device, dtype=torch.float)\n",
     "        labels = labels.to(device, dtype=torch.float)\n",
     "        outputs = model(inputs)\n",
     "            \n",
     "        loss = criterion(outputs, labels)\n",
+    "        if optimizer:\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
     "        total_loss += loss.item() * inputs.size(0)\n",
     "            \n",
     "        predicted = outputs > 0\n",
@@ -313,7 +316,27 @@
     "\n",
     "        accuracy += correct_predicted        \n",
     "\n",
-    "    return (total_loss, accuracy) "
+    "    return (total_loss, accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model(num_of_epoch, model, dataset_loaders, dataset_sizes, criterion, optimizer):\n",
+    "    torch.cuda.empty_cache()\n",
+    "    since = time.time()\n",
+    "    \n",
+    "    train_losses = []\n",
+    "    train_accuracies = []\n",
+    "    validation_losses = []\n",
+    "    validation_accuracies = []\n",
+    "    \n",
+    "    for epoch in range(num_of_epoch):\n",
+    "        \n",
+    "    "
    ]
   },
   {
